# capstone

./: 1. 로그인.txt  2. 프로젝트 관리.txt  2. 프로젝트 리스트.txt  3. 데이터셋 관리.txt  4. 전처리 관리.txt  5. 학습 관리.txt  6. 결과 관리.txt  pyproject.toml  수정.txt  실행 순서.txt  요구사항명세서.xlsx  요구사항명세서_수정본.xlsx
backend/: database.py  main.py  models.py
frontend/src/: App.jsx  DatasetManage.css  DatasetManage.jsx  Login.css  Login.jsx  ModelManage.jsx  PreprocessingManage.css  PreprocessingManage.jsx  ProjectList.jsx  Projects.css  Projects.jsx  ThemeToggle.jsx  TrainingManage.css  TrainingManage.jsx  main.jsx  modern-theme.css
frontend/src/apis/: modelRegistry.js
sample_datasets/sample_classification_yolo/: README.txt  data.yaml
sample_datasets/sample_classification_yolo/labels/train/: circle_001.txt  circle_002.txt  circle_003.txt  circle_004.txt  circle_005.txt  circle_006.txt  circle_007.txt  circle_008.txt  circle_009.txt  circle_010.txt  circle_011.txt  circle_012.txt  circle_013.txt  circle_014.txt  circle_015.txt  circle_016.txt  circle_017.txt  circle_018.txt  circle_019.txt  circle_020.txt  circle_021.txt  circle_022.txt  circle_023.txt  circle_024.txt  circle_025.txt  circle_026.txt  circle_027.txt  circle_028.txt  circle_029.txt  circle_030.txt  circle_031.txt  circle_032.txt  circle_033.txt  (+47 more)
sample_datasets/sample_detection_yolo/: README.txt  data.yaml
training/: __init__.py  train.py
training/models/: convnext_model.py
training/settings/: __init__.py  convnext_setting.py  yolo_setting.py
training/trainers/: convnext_trainer.py  yolo_trainer.py
training/utils/: seed.py
(+120 files in other folders)
